; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_node.c_writer.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_node.c_writer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [19 x i8] c"get fd:%d,size:%d\0A\00", align 1
@.str.1 = private unnamed_addr constant [21 x i8] c"write fd:%d,size:%d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i64, i8*)* @writer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @writer(i32* %0, i8* %1, i64 %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i8* %1, i8** %7, align 8
  store i64 %2, i64* %8, align 8
  store i8* %3, i8** %9, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = call i32 @UNUSED(i32* %11)
  %13 = load i8*, i8** %9, align 8
  %14 = bitcast i8* %13 to i32*
  %15 = load i32, i32* %14, align 4
  store i32 %15, i32* %10, align 4
  %16 = load i32, i32* %10, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %19, label %18

18:                                               ; preds = %4
  store i32 1, i32* %5, align 4
  br label %37

19:                                               ; preds = %4
  %20 = load i32, i32* %10, align 4
  %21 = load i64, i64* %8, align 8
  %22 = call i32 @NODE_DBG(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i32 %20, i64 %21)
  %23 = load i64, i64* %8, align 8
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %33

25:                                               ; preds = %19
  %26 = load i64, i64* %8, align 8
  %27 = load i32, i32* %10, align 4
  %28 = load i8*, i8** %7, align 8
  %29 = load i64, i64* %8, align 8
  %30 = call i64 @vfs_write(i32 %27, i8* %28, i64 %29)
  %31 = icmp ne i64 %26, %30
  br i1 %31, label %32, label %33

32:                                               ; preds = %25
  store i32 1, i32* %5, align 4
  br label %37

33:                                               ; preds = %25, %19
  %34 = load i32, i32* %10, align 4
  %35 = load i64, i64* %8, align 8
  %36 = call i32 @NODE_DBG(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.1, i64 0, i64 0), i32 %34, i64 %35)
  store i32 0, i32* %5, align 4
  br label %37

37:                                               ; preds = %33, %32, %18
  %38 = load i32, i32* %5, align 4
  ret i32 %38
}

declare dso_local i32 @UNUSED(i32*) #1

declare dso_local i32 @NODE_DBG(i8*, i32, i64) #1

declare dso_local i64 @vfs_write(i32, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
